    Windows is fully supported.
  * Windows problems with long filenames should be fixed now,
    since the Windows build is made with a newer ghc version that works
    around the problems.
  * stack.yaml: Build with http-client-0.5.14 to get a bug fix to http header
    parsing.
  * Drop support for building with ghc older than 8.4.4,
    and with older versions of serveral haskell libraries.
  * Corrected some license statements.
    Thanks, Sean Whitton.

 -- Joey Hess <id@joeyh.name>  Tue, 30 Jul 2019 12:22:25 -0400

git-annex (7.20190708) upstream; urgency=medium

  * Fix find --json to output json once more.

 -- Joey Hess <id@joeyh.name>  Mon, 08 Jul 2019 08:58:16 -0400

git-annex (7.20190626) upstream; urgency=medium

  * get, move, copy, sync: When -J or annex.jobs has enabled concurrency,
    checksum verification uses a separate job pool than is used for
    downloads, to keep bandwidth saturated.
  * Other commands also run their cleanup phase using a separate job pool
    than their perform phase, which may make some of them somewhat faster
    when running concurrently as well.
  * When downloading an url and the destination file exists but is empty,
    avoid using http range to resume, since a range "bytes=0-" is an unusual
    edge case that it's best to avoid relying on working. This is known to
    fix a case where importfeed downloaded a partial feed from such a server.
  * importfeed: When there's a problem parsing the feed, --debug will
    output the feed content that was downloaded.
  * init: Fix a reversion in the last release that prevented automatically
    generating and setting a description for the repository.
  * add: Display progress meter when hashing files.
  * add: Support --json-progress option.
  * The Linux standalone arm build now works again on CPU versions below
    arm6. Thanks to Emanuele Olivetti, Ilias Tsitsimpis, Bernhard
    Übelacker, and Adrian Bunk for fixing ghc in Debian (bug #928882).